--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@testing-library/react": "^16.1.0",
     "cra-template": "1.2.0",
+    "firebase": "^11.1.0",
+    "firebase-tools": "^13.29.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
@@ -15,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "Stop": "killall -9 node"
+    "stop": "killall -9 node"
   },
   "eslintConfig": {
     "extends": [
